--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
  <hr>
   <h1>Bienvenido a la pagina de paco</h1>
   <p>Aqui puedes encontrar informacion sobre el sevilla</p>
-  <img src="imagenes/sevilla.jpeg" width="300" height"225">
+  <img src="sevilla.jpeg" width="300" height"225">
   <p>Aqui puedes encontrar informacion sobre la plantilla del sevilla</p>
-  <img src="imagenes/plantilla.jpeg" width="300" height"225">
+  <img src="plantilla.jpeg" width="300" height"225">
 	  <p>. <a href="pagina1.html">Pagina1</a></p>
 	  <p>. <a href="pagina2.html">Pagina2</a></p>
 </body>
