--- a/pagina1.html
+++ b/pagina1.html
@@ -9,9 +9,9 @@
  <hr>
   <h1>Bienvenido a la pagina 1 de paco</h1>
   <p>Aqui puedes encontrar informacion sobre titulos del sevilla</p>
-  <img src="imagenes/titulos.jpeg" width="300" height"225">
+  <img src="titulos.jpeg" width="300" height"225">
   <p>Aqui puedes encontrar informacion sobre la liga historica del sevilla</p>
-  <img src="imagenes/liga.jpeg" width="300" height"225">
+  <img src="liga.jpeg" width="300" height"225">
 	  	  <p>. <a href="index.html">Indice</a></p>
 </body>
 </html>
