--- a/pagina2.html
+++ b/pagina2.html
@@ -9,9 +9,9 @@
  <hr>
   <h1>Bienvenido a la pagina 2 de paco</h1>
   <p>Aqui puedes encontrar informacion sobre mejor plantilla de su historia</p>
-  <img src="imagenes/plantilla2.jpeg" width="300" height"225">
+  <img src="plantilla2.jpeg" width="300" height"225">
   <p>Aqui puedes encontrar informacion sobre mejor jugador de la historia del sevilla</p>
-  <img src="imagenes/kanoute.jpeg" width="300" height"225">
+  <img src="kanoute.jpeg" width="300" height"225">
 	  	  <p>. <a href="index.html">Indice</a></p>
 </body>
 </html>
